# XMLParser

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml
cmake/: XmlParserConfig.cmake.in
docs/: RUNBOOK-xml-parsing-library.md  conformance-fixtures.md  requirements-traceability.md
docs/slo/completion/: xmlparser-m1.md  xmlparser-m2.md  xmlparser-m3.md  xmlparser-m4.md  xmlparser-m5.md
docs/slo/critique/: xml-parsing-library.md
docs/slo/design/: xml-parsing-library-code-map.md  xml-parsing-library-interfaces.md  xml-parsing-library-overview.md  xml-parsing-library-reversibility.md  xml-parsing-library-stack-decision.md  xml-parsing-library-threat-model.md
docs/slo/idea/: xml-parsing-library.md
docs/slo/lessons/: xmlparser-m1.md  xmlparser-m2.md  xmlparser-m3.md  xmlparser-m4.md  xmlparser-m5.md
docs/slo/research/xml-parsing-library/: dossier.md  sources.md  synthesis.md
docs/slo/verify/: xmlparser-m1.md  xmlparser-m2.md  xmlparser-m3.md  xmlparser-m4.md  xmlparser-m5.md
include/xmlparser/: dom.h  errors.h  options.h  parser.h  sax.h  serializer.h  source_location.h  version.h  xmlparser.h
src/: dom.cpp  parser_core.cpp  parser_core.h  xmlparser.cpp
tests/: bdd_m1_public_api.cpp  e2e_m1_cmake_consumer.cpp
tests/coverage/: parser_core_coverage.cmake
tests/e2e/: platform_cmake_consumer_tests.cpp  platform_dependency_audit.cmake  platform_public_header_tests.cpp  platform_release_evidence_tests.cpp
tests/fixtures/w3c/xmlconf/: README.md  manifest.xml
tests/req/: dom_attribute_access_tests.cpp  dom_model_tests.cpp  dom_mutation_tests.cpp  dom_serialization_tests.cpp  dom_traversal_tests.cpp  error_dtd_validation_tests.cpp  error_exception_safety_tests.cpp  error_location_exception_tests.cpp  error_malformed_input_tests.cpp  error_recoverable_callback_tests.cpp  error_validation_distinction_tests.cpp  parser_event_recorder.h  sax_callback_registration_tests.cpp  sax_event_coverage_tests.cpp  sax_incremental_tests.cpp  sax_namespace_event_tests.cpp  sax_streaming_tests.cpp  std_encoding_tests.cpp  std_markup_constructs_tests.cpp  std_namespaces_tests.cpp  std_xml10_conformance_tests.cpp  std_xml11_tests.cpp
